kubernetes/003-pannenstreifen-website-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: pannenstreifen-website

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: pannenstreifen-website
