kubernetes/03-pannenstreifen-website-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pannenstreifen-website

spec:
  selector:
    app: pannenstreifen-website
  ports:
    - name: web
      port: 80
      targetPort: web
