kubernetes/04-pannenstreifen-website-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`pannenstreifen.calfur.dev`)
    kind: Rule
    services:
    - name: pannenstreifen-website
      port: 80
  tls:
    certResolver: defaultresolver
